<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Emulator screen -->
    <es.chipeit.android.ui.emulator.EmulatorScreen
        android:id="@+id/activity_emulator_screen_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_emulator_screen_view_height" />

    <!-- Buttons -->
    <es.chipeit.android.ui.SquareLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_emulator_keyboard_view_margin"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_emulator_screen_view">

        <!-- First row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/activity_emulator_key_one_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_one_btn" />

            <Button
                android:id="@+id/activity_emulator_key_two_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_two_btn" />

            <Button
                android:id="@+id/activity_emulator_key_three_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_three_btn" />

            <Button
                android:id="@+id/activity_emulator_key_c_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_c_btn" />

        </LinearLayout>

        <!-- Second row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/activity_emulator_key_four_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_four_btn" />

            <Button
                android:id="@+id/activity_emulator_key_five_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_five_btn" />

            <Button
                android:id="@+id/activity_emulator_key_six_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_six_btn" />

            <Button
                android:id="@+id/activity_emulator_key_d_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_d_btn" />

        </LinearLayout>

        <!-- Third row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/activity_emulator_key_seven_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_seven_btn" />

            <Button
                android:id="@+id/activity_emulator_key_eigth_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_eight_btn" />

            <Button
                android:id="@+id/activity_emulator_key_nine_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_nine_btn" />

            <Button
                android:id="@+id/activity_emulator_key_e_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_e_btn" />

        </LinearLayout>

        <!-- Fourth row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/activity_emulator_key_a_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_a_btn" />

            <Button
                android:id="@+id/activity_emulator_key_zero_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_zero_btn" />

            <Button
                android:id="@+id/activity_emulator_key_b_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_b_btn" />

            <Button
                android:id="@+id/activity_emulator_key_f_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_emulator_key_f_btn" />

        </LinearLayout>

    </es.chipeit.android.ui.SquareLayout>

</android.support.constraint.ConstraintLayout>
